--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-    <canvas id="canvas"></canvas>
+    <canvas id="canvas" width="400" height="250"></canvas>
 
 
     <script src="main.js"></script>
