--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     
     <canvas id="canvas" width="400" height="250"></canvas>
 
+    <div class="end-game">
+        <h1>Game Over!</h1>
+        <button class="end-game-btn">Jogar Novamente!</button>
+    </div>
 
     <script src="main.js"></script>
 </body>
