--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 </head>
 <body>
     
+    <div id="score-during-game">
+        <span id="game-score">0</span>
+        <span id="top-score-current">TOP:</span>
+    </div>
+
     <h1 id="text-animate">Click Arrows</h1>
-    <span id="game-score">0</span>
-    <span id="top-score-current">TOP:</span>
     
     <canvas id="canvas" width="400" height="250"></canvas>
 
