text animate fix

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <span id="top-score-current">TOP:</span>
     </div>
 
-    <h1 id="text-animate">Click Arrows</h1>
+    <h1 id="text-animate">Click Arrows Keys</h1>
     
     <canvas id="canvas" width="400" height="250"></canvas>
 
